hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__convert_u@llvm14.snap
---
source: src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define double @_hl.main.1(i16 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = uitofp i16 %0 to double
  ret double %1
}
