hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__ifrombool@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i8 @_hl.main.1({ i32, {}, {} } %0) {
alloca_block:
  %"0" = alloca i8, align 1
  %"2_0" = alloca { i32, {}, {} }, align 8
  %"4_0" = alloca i8, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store { i32, {}, {} } %0, { i32, {}, {} }* %"2_0", align 4
  %"2_01" = load { i32, {}, {} }, { i32, {}, {} }* %"2_0", align 4
  %1 = extractvalue { i32, {}, {} } %"2_01", 0
  %2 = icmp eq i32 %1, 1
  %3 = select i1 %2, i8 1, i8 0
  store i8 %3, i8* %"4_0", align 1
  %"4_02" = load i8, i8* %"4_0", align 1
  store i8 %"4_02", i8* %"0", align 1
  %"03" = load i8, i8* %"0", align 1
  ret i8 %"03"
}
